Fix banner and collapse component CSS

--- a/src/assets/Sass/components/banner.scss
+++ b/src/assets/Sass/components/banner.scss
@@ -25,6 +25,7 @@
         justify-content: center;
         color:$invertFont;
         font-size:3rem;
-        font-weight: 300;
+        font-weight: 600;
+        text-shadow: 0 2px 4px black
     }
 }
