--- a/src/assets/Sass/components/collapse.scss
+++ b/src/assets/Sass/components/collapse.scss
@@ -21,6 +21,7 @@
         font-size: 1.5rem;
         border-radius: $lightRadius;
         border:0;
+        cursor: pointer
     }
     .collapse-content{
         z-index:-1;
