--- a/src/assets/Sass/utilities/variables.scss
+++ b/src/assets/Sass/utilities/variables.scss
@@ -5,7 +5,7 @@ $invertFont:#fff;
 $dark:#000;
 
 // transparent colors
-$overlay:#00000080;
+$overlay:#0000005d;
 $shadow:rgba(0, 0, 0, 0.05);
 
 // misc
